oxiplate-derive/tests/config/crates/unexpected-escape-sequence/tests/broken/unexpected-escape-sequence.stderr
error: Failed to parse `/oxiplate.toml`: Unexpected escape sequence. Expected `\"`, `\\`, `\b`, `\e`, `\f`, `\n`, `\r`, `\t`, `\x[0-9a-fA-F]{2}`, `\u[0-9a-fA-F]{4}`, or `\U[0-9a-fA-F]{8}`
 --> tests/broken/unexpected-escape-sequence.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
